# kamino

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  clippy.yml  codecov.yml
src/: bubbles.rs  filter_groups.rs  graph.rs  group_extraction.rs  group_filtering.rs  group_sorting.rs  io.rs  lib.rs  main.rs  middle_mask.rs  output.rs  phylo.rs  proba_filter.rs  protein_prediction.rs  recode.rs  revert_aminoacid.rs  traverse.rs  util.rs  variant_groups.rs
tests/: golden.rs  golden_3diff.rs  run-golden-tests.sh  run_3diff.sh
tests/common/: mod.rs
tests/data/expected/: kamino_alignment.fas  kamino_partitions.tsv
tests/data/input/: A.fas  B.fas  C.fas  D2.fas  E2.fas  E3.fas
tests/data/test_3diff/: input.tsv
tests/data/test_3diff/expected/: kamino_NJ.tree  kamino_missing.tsv
tests/data/test_3diff/input/: B.fas  D1.fas  E1.fas
tests/data/test_genomes/expected/: kamino_alignment.fas  kamino_missing.tsv  kamino_partitions.tsv
tests/data/test_genomes/input/: genome_A.fas  genome_B.fas
