[package]
name = "kamino-cli"
version = "0.6.1"
edition = "2021"
description = "Build phylogenomic datasets in seconds."
license = "MIT"
repository = "https://github.com/rderelle/kamino"
readme = "README.md"
keywords = ["bioinformatics", "phylogenomic", "k-mer"]
categories = ["science"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
seq_io = "0.3.4"
flate2 = { version = "1.0", features = ["rust_backend"] }
hashbrown = "0.14"
smallvec = "1.13"
ahash = "0.8.12"
bitvec = "1"
rayon = "1.11"
dashmap = "6"
rustc-hash = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = true

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "kamino"
path = "src/main.rs"
