[package]
name = "kamino-cli"
version = "2.0.0"
edition = "2021"
description = "Build phylogenomic datasets in seconds."
license = "MIT"
repository = "https://github.com/rderelle/kamino"
readme = "README.md"
keywords = ["bioinformatics", "phylogenomic", "alignment-free", "k-mer"]
categories = ["science"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
seq_io = "0.3.4"
flate2 = { version = "1.0", features = ["rust_backend"] }
tempfile = "3"
hashbrown = "0.14"
rayon = "1.11"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = false

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "kamino"
path = "src/main.rs"
